--- a/client/public/index.css
+++ b/client/public/index.css
@@ -1,4 +1,5 @@
 body {
+  height: 100%;
   margin: 0;
   padding: 10px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +11,8 @@ body {
 
 h1, h2 {
   padding-bottom: 8px;
+}
+
+#root {
+  height: 100%;
 }
